Migrating old URL class uses to URI